--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -110,13 +110,10 @@ runs:
       run: |
         echo "Updating task definition with optional properties"
         echo '${{ inputs.environment_vars }}' > extra_env_vars.json
-        jq \
-          --slurpfile extra_env_vars extra_env_vars.json \
-          '
+        jq --slurpfile extra_env_vars extra_env_vars.json '
           .containerDefinitions[0].environment =
-            ((.containerDefinitions[0].environment // []) + $extra_env_vars[0])
-          ' \
-          task-definition-mandatory.json > task-definition.json
+            ((.containerDefinitions[0].environment // []) + ($extra_env_vars[0] // []))
+          ' task-definition-mandatory.json > task-definition.json
 
         cat task-definition.json
 
