--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -113,6 +113,8 @@ runs:
 
         cat extra_env_vars.json
 
+        cat task-definition-mandatory.json
+
         jq --slurpfile extra_env_vars extra_env_vars.json '
           .containerDefinitions[0].environment =
             ((.containerDefinitions[0].environment // []) + ($extra_env_vars[0] // []))
