--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -140,15 +140,12 @@ runs:
         echo "Updating task definition with optional properties"
         echo '${{ inputs.environment_vars }}' > extra_env_vars.json
 
-        cat extra_env_vars.json
-
-        cat task-definition-mandatory.json
-
         jq --slurpfile extra_env_vars extra_env_vars.json '
           .containerDefinitions[0].environment =
             ((.containerDefinitions[0].environment // []) + ($extra_env_vars[0] // []))
           ' task-definition-mandatory.json > task-definition.json
 
+        echo "Sannity check of the generated task definition:"
         cat task-definition.json
 
     - name: Deploy to ECS
