--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -67,30 +67,29 @@ runs:
   using: "composite"
 
   steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
-        aws-session-token: ${{ inputs.aws-session-token }}
-        aws-region: ${{ inputs.aws-region }}
+    # - name: Configure AWS credentials
+    #   uses: aws-actions/configure-aws-credentials@v4
+    #   with:
+    #     aws-access-key-id: ${{ inputs.aws-access-key-id }}
+    #     aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+    #     aws-session-token: ${{ inputs.aws-session-token }}
+    #     aws-region: ${{ inputs.aws-region }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+    # - name: Login to Amazon ECR
+    #   id: login-ecr
+    #   uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Pull the image from ECR
-      shell: bash
-      run: |
-        echo "Pulling image from ECR"
-        docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}
+    # - name: Pull the image from ECR
+    #   shell: bash
+    #   run: |
+    #     echo "Pulling image from ECR"
+    #     docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}
 
     - name: Generate task-definition from template
       # The action amazon-ecs-render-task-definition@v1, don't support all properties needed 
       shell: bash
       run: |
         echo "Generating task definition from template with jq"
-
         jq \
           --arg environment "${{ inputs.environment }}" \
           --arg service_name "${{ inputs.aws-ecs-service }}" \
@@ -106,20 +105,24 @@ runs:
           --arg task_cpu "${{ inputs.task-cpu }}" \
           --arg task_mem "${{ inputs.task-memory }}" \
           '
+          # helpers: setar número/string só se o input vier preenchido
+          def setnum(p; v): if (v|length)>0 then p = (v|tonumber) else . end;
+          def setstr(p; v): if (v|length)>0 then p = v else . end;
+
           .family = $service_name
           | .containerDefinitions[0].name  = $service_name
           | .containerDefinitions[0].image = $image_name
 
           # ---- Container: portas e recursos (números) ----
-          | .containerDefinitions[0].portMappings[0].containerPort = $container_port
-          | .containerDefinitions[0].portMappings[0].hostPort = $container_host_port
-          | .containerDefinitions[0].cpu = $container_cpu
-          | .containerDefinitions[0].memoryReservation = $container_mem_res
-          | .containerDefinitions[0].memory = $container_mem
+          | setnum(.containerDefinitions[0].portMappings[0].containerPort;      $container_port)
+          | setnum(.containerDefinitions[0].portMappings[0].hostPort;           $container_host_port)
+          | setnum(.containerDefinitions[0].cpu;                                 $container_cpu)
+          | setnum(.containerDefinitions[0].memoryReservation;                   $container_mem_res)
+          | setnum(.containerDefinitions[0].memory;                              $container_mem)
 
           # ---- Task-level cpu/memory (strings no schema da AWS) ----
-          | .cpu = $task_cpu
-          | .memory = $task_mem
+          | setstr(.cpu;    $task_cpu)
+          | setstr(.memory; $task_mem)
 
           # ---- ENV: upsert (anexa e deduplica por "name") ----
           | .containerDefinitions[0].environment = (
