--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -161,11 +161,11 @@ runs:
       shell: bash
       run: |
         echo "Updating task definition with optional properties"
-        echo '${{ inputs.environment_vars }}' > extra_env_vars.json
+        echo '${{ inputs.environment-vars }}' > extra_environment_vars.json
 
-        jq --slurpfile extra_env_vars extra_env_vars.json '
+        jq --slurpfile extra_environment_vars extra_environment_vars.json '
           .containerDefinitions[0].environment =
-            ((.containerDefinitions[0].environment // []) + ($extra_env_vars[0] // []))
+            ((.containerDefinitions[0].environment // []) + ($extra_environment_vars[0] // []))
           ' task-definition-mandatory.json > task-definition.json
 
         echo "Sannity check of the generated task definition:"
