ajuste de namespace de log group

--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -138,7 +138,7 @@ runs:
             )
 
           # ---- Logs ----
-          | .containerDefinitions[0].logConfiguration.options."awslogs-group"  = ("/ecs/" + $environment + "/" + $service_name)
+          | .containerDefinitions[0].logConfiguration.options."awslogs-group"  = ("aws/ecs/" + $environment + "/" + $service_name)
           | .containerDefinitions[0].logConfiguration.options."awslogs-region" = $region
 
           # ---- Roles ----
