--- a/.github/workflows/build-env-refs.yml
+++ b/.github/workflows/build-env-refs.yml
@@ -38,7 +38,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: build-env-refs-items
+          name: build-env-refs-item-${{ matrix.key }}
           path: items
 
   merge:
