--- a/.github/workflows/build-env-refs.yml
+++ b/.github/workflows/build-env-refs.yml
@@ -51,7 +51,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: build-env-refs-items
+          pattern: build-env-refs-item-*
+          merge-multiple: true
           path: items
 
       - id: merge
